# raytracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_glew.ps1  install_glew.sh
res/shaders/: hitinfo.glsl  includes_structs.glsl  light.glsl  material.glsl  shader.glsl  shader_pick.glsl  simple_shader.glsl
res/shaders/common/: constants.glsl  gui_uniforms.glsl  scene_uniforms.glsl
res/shaders/core/: bvh.glsl  intersection.glsl  ray.glsl  trace.glsl  wireframe.glsl
res/shaders/processing/: oversampling.glsl
res/shaders/shading/: fresnel.glsl  light.glsl  lighting.glsl  material.glsl  pbr.glsl  reflection.glsl  refraction.glsl  shadow.glsl  texture.glsl
res/shaders/shapes/: plane.glsl  shapes.glsl  sphere.glsl  triangle.glsl
src/: ImageGen.cpp  InteractiveMain.cpp
src/engine/: BVHNode.cpp  BVHNode.h  BoundingBox.cpp  BoundingBox.h  Camera.h  ComputeRenderer.cpp  ComputeRenderer.h  GPULightSource.h  GPUMaterial.h  Intersection.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vector.h
src/engine/acceleration/: BVHNode.cpp  BVHNode.h  BoundingBox.cpp  BoundingBox.h  GPUBVHNode.h
src/engine/scenes/: Scene.cpp  Scene.h  Scene1.cpp  Scene1.h  SceneFresnel.cpp  SceneFresnel.h  SceneGPU.cpp  SceneGPU.h  SceneMicrofacets.cpp  SceneMicrofacets.h
src/engine/shapes/: GPUShapeData.h  OBJ.cpp  OBJ.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/engine/textures/: SubTexture.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/gui/: Application.cpp  Application.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InputManager.cpp  InputManager.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h  WindowConfig.h
src/gui/windows/: InspectorWindow.cpp  InspectorWindow.h  MainViewport.cpp  MainViewport.h  MenuBar.cpp  MenuBar.h  RendererWindow.cpp  RendererWindow.h  ResolutionWindow.cpp  ResolutionWindow.h  StatisticsWindow.cpp  StatisticsWindow.h  UIWindow.cpp  UIWindow.h  UiWindow.h
src/preferences/: PreferenceManager.cpp  PreferenceManager.h
